// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageTemplate fullHeight is rendered with noscroll 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate fullHeight is rendered with true 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPage euiPageTemplate testClass1 testClass2 css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  data-test-subj="test subject string"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate restrict width can be set to a custom number 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-custom"
        style="max-width:1024px"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate restrict width can be turned off 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
    data-test-subj="test subject string"
  >
    <div
      class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="euiPageContentBody euiPageContentBody--restrictWidth-default testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        aria-label="aria-label"
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter testClass1 testClass2 css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 css-1ef1zro-euiPageHeader"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent css-1wn4des-euiPageHeaderContent-border-l"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:40vh"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-n9us4v-euiPanel-grow-m-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody css-jrhfux-euiPageBody-l-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody css-jrhfux-euiPageBody-l-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1nsffwn-euiPanel-grow-m-l-plain-hasShadow"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone css-1nn8px6-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone css-1nn8px6-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone css-1nn8px6-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="euiPageContentBody euiPageContentBody--restrictWidth-default testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone css-1nn8px6-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        aria-label="aria-label"
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter testClass1 testClass2 css-1f0qifb-euiPanel-grow-m-l-subdued"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 css-1xiivv7-euiPageHeader-l"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent css-1nca8h8-euiPageHeaderContent-l"
        style="max-width:1200px"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone css-1nn8px6-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:40vh"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone css-1nn8px6-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-16hyq28-euiPanel-grow-m-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone css-1nn8px6-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageBody css-r7b4w6-euiPanel-grow-none-l-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageBody css-r7b4w6-euiPanel-grow-none-l-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter css-1f0qifb-euiPanel-grow-m-l-subdued"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default testClass1 testClass2"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone testClass1 testClass2 css-10ffim0-euiPanel-grow-none-plain"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 css-1xiivv7-euiPageHeader-l"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent css-1nca8h8-euiPageHeaderContent-l"
        style="max-width:1200px"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:40vh"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPageBody css-p9lgjy-euiPanel-grow-none-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody css-jrhfux-euiPageBody-l-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPageBody css-p9lgjy-euiPanel-grow-none-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody css-jrhfux-euiPageBody-l-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="euiPageContentBody testClass1 testClass2"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone testClass1 testClass2 css-1k1l0tw-euiPanel-grow-none-transparent"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 css-1ef1zro-euiPageHeader"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent css-1wn4des-euiPageHeaderContent-border-l"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:40vh"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-xkfw2o-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody css-bb4z1c-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody css-jrhfux-euiPageBody-l-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody css-jrhfux-euiPageBody-l-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone css-1k1l0tw-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate with bottomBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate css-2q490-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody css-xtm66w-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone css-10ffim0-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
      style="left:0;right:0;bottom:0"
    >
      <h2
        class="euiScreenReaderOnly"
      >
        Page level controls
      </h2>
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      >
        Bottom Bar
      </div>
    </section>
    <p
      aria-live="assertive"
      class="euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</div>
`;
